# cpp-killteam

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
data/gamestates/: startgame.proto
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp  GameState.hpp  Player.cpp  Player.hpp
src/game/game_states/: StartGameState.hpp  StateConcepts.hpp  WaitingForPlayerState.hpp
src/game/proto/: server_message.proto  start_game.proto  waiting_for_player.proto
src/server/: CreateGameController.cpp  CreateGameController.hpp  TestController.cpp  TestController.hpp
src/server/controllers/: CreateGameController.cpp  CreateGameController.hpp  GameWSController.cpp  GameWSController.hpp
src/util/: ControllerHelper.hpp  RandomGenerator.hpp
test/: CMakeLists.txt
test/game/: Game.Test.cpp  game.test.cpp
test/server/controllers/: CreateGameController.Test.cpp
